--- a/crates/solana-listener/Cargo.toml
+++ b/crates/solana-listener/Cargo.toml
@@ -19,7 +19,8 @@ relayer-engine.workspace = true
 chrono.workspace = true
 
 gmp-gateway.workspace = true
-common-serde-utils = { workspace = true, features = ["solana-sdk"] }
+common-serde-utils = { workspace = true }
+core-common-serde-utils = { workspace = true }
 
 solana-client.workspace = true
 solana-sdk.workspace = true
