--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,11 +62,7 @@ unused_must_use = { level = "deny", priority = -1 }
 
 [workspace.dependencies]
 # Our crates
-relayer-engine = { path = "crates/relayer-engine" }
-relayer-amplifier-api-integration = { path = "crates/relayer-amplifier-api-integration" }
-relayer-amplifier-state = { path = "crates/relayer-amplifier-state" }
 file-based-storage = { path = "crates/file-based-storage" }
-amplifier-api = { path = "crates/amplifier-api" }
 solana-listener = { path = "crates/solana-listener" }
 common-serde-utils = { path = "crates/common-serde-utils" }
 solana-event-forwarder = { path = "crates/solana-event-forwarder" }
@@ -74,6 +70,13 @@ solana-tx-pusher = { path = "crates/solana-tx-pusher" }
 retrying-solana-http-sender = { path = "crates/retrying-solana-http-sender" }
 solana-gateway-task-processor = { path = "crates/solana-gateway-task-processor" }
 effective-tx-sender = { path = "crates/effective-tx-sender" }
+
+# Relayer core
+amplifier-api = { git = "https://github.com/eigerco/axelar-relayer-core-internal.git", branch = "remove-solana" }
+relayer-engine = { git = "https://github.com/eigerco/axelar-relayer-core-internal.git", branch = "remove-solana" }
+relayer-amplifier-api-integration = { git = "https://github.com/eigerco/axelar-relayer-core-internal.git", branch = "remove-solana" }
+relayer-amplifier-state = { git = "https://github.com/eigerco/axelar-relayer-core-internal.git", branch = "remove-solana" }
+core-common-serde-utils = { git = "https://github.com/eigerco/axelar-relayer-core-internal.git", package = "common-serde-utils", branch = "remove-solana" }
 
 # Solana Gateway
 gmp-gateway = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main", features = ["no-entrypoint"] }
