refactor: relayer uses the new solana gateway (#2)
* refactor: task processor using the new gateway
* feat: update event forwarder to use the new gateway
* chore: updated deps & deny.toml

--- a/crates/solana-event-forwarder/Cargo.toml
+++ b/crates/solana-event-forwarder/Cargo.toml
@@ -12,13 +12,12 @@ futures.workspace = true
 relayer-amplifier-api-integration.workspace = true
 solana-listener.workspace = true
 relayer-engine.workspace = true
-gmp-gateway.workspace = true
 tracing.workspace = true
 eyre.workspace = true
 bs58.workspace = true
 solana-sdk.workspace = true
-axelar-message-primitives.workspace = true
-axelar-rkyv-encoding.workspace = true
+axelar-solana-gateway.workspace = true
+gateway-event-stack.workspace = true
 
 [dev-dependencies]
 base64.workspace = true
