--- a/crates/solana-gateway-task-processor/Cargo.toml
+++ b/crates/solana-gateway-task-processor/Cargo.toml
@@ -13,8 +13,10 @@ solana-sdk.workspace = true
 typed-builder.workspace = true
 solana-client.workspace = true
 serde.workspace = true
-gmp-gateway.workspace = true
-axelar-rkyv-encoding.workspace = true
+axelar-solana-gateway.workspace = true
+axelar-solana-its.workspace = true
+axelar-solana-governance.workspace = true
+axelar-solana-encoding.workspace = true
 tracing.workspace = true
 futures.workspace = true
 common-serde-utils = { workspace = true }
