--- a/crates/solana-listener/Cargo.toml
+++ b/crates/solana-listener/Cargo.toml
@@ -17,11 +17,9 @@ url.workspace = true
 serde.workspace = true
 relayer-engine.workspace = true
 chrono.workspace = true
-
-gmp-gateway.workspace = true
-common-serde-utils = { workspace = true }
-core-common-serde-utils = { workspace = true }
-
+axelar-solana-gateway.workspace = true
+common-serde-utils.workspace = true
+core-common-serde-utils.workspace = true
 solana-client.workspace = true
 solana-sdk.workspace = true
 solana-transaction-status.workspace = true
