--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,10 +79,13 @@ relayer-amplifier-state = { git = "https://github.com/eigerco/axelar-relayer-cor
 core-common-serde-utils = { git = "https://github.com/eigerco/axelar-relayer-core.git", package = "common-serde-utils", branch = "main" }
 
 # Solana Gateway
-gmp-gateway = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main", features = ["no-entrypoint"] }
-axelar-rkyv-encoding = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main" }
-axelar-message-primitives = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main" }
-axelar-executable = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main" }
+axelar-solana-gateway = { git = "https://github.com/eigerco/solana-axelar.git", rev = "91c8cf2", features = ["no-entrypoint"] }
+axelar-solana-its = { git = "https://github.com/eigerco/solana-axelar.git", rev = "91c8cf2", features = ["no-entrypoint"] }
+axelar-solana-governance = { git = "https://github.com/eigerco/solana-axelar.git", rev = "91c8cf2", features = ["no-entrypoint"] }
+gateway-event-stack = { git = "https://github.com/eigerco/solana-axelar.git", rev = "91c8cf2" }
+axelar-solana-encoding = { git = "https://github.com/eigerco/solana-axelar.git", rev = "91c8cf2" }
+axelar-message-primitives = { git = "https://github.com/eigerco/solana-axelar.git", rev = "91c8cf2" }
+axelar-executable = { git = "https://github.com/eigerco/solana-axelar.git", rev = "91c8cf2" }
 
 # CLI
 clap = { version = "4", features = ["derive"] }
@@ -98,14 +101,14 @@ bs58 = "0.5"
 redact = { version = "0.1", features = ["serde"] }
 thiserror = "1"
 uuid = { version = "1.2", features = ["v4", "serde"] }
-typed-builder = "0.18"
+typed-builder = "0.2"
 derive_builder = "0.20"
 bnum = "0.12"
 hex = "0.4"
 quanta = "0.12"
 backoff = { version = "0.4", features = ["tokio"] }
 indoc = "2"
-itertools = "0.12"
+itertools = "0.13"
 num-traits = "0.2"
 memmap2 = "0.9"
 bytemuck = "1.19"
@@ -114,10 +117,10 @@ bytemuck = "1.19"
 serde = { version = "1", features = ["derive"] }
 toml = "0.8"
 serde_json = "1"
-simd-json = "0.13"
+simd-json = "0.14"
 
 # Tests
-rstest = { version = "0.21" }
+rstest = { version = "0.23" }
 test-log = { version = "0.2", features = ["trace"], default-features = false }
 pretty_assertions = "1"
 mockall = "0.13"
@@ -130,12 +133,12 @@ color-eyre = "0.6"
 reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "deflate", "rustls-tls", "stream", "http2"] }
 
 # Solana
-solana-client = "2"
-solana-rpc-client = "2"
-solana-rpc-client-api = "2"
-solana-program = "2"
-solana-sdk = "2"
-solana-transaction-status = "2"
+solana-client = "=2.0.16"
+solana-rpc-client = "=2.0.16"
+solana-rpc-client-api = "=2.0.16"
+solana-program = "=2.0.16"
+solana-sdk = "=2.0.16"
+solana-transaction-status = "=2.0.16"
 
 # Async
 tokio = { version = "1", features = ["rt", "signal", "rt-multi-thread", "macros"] }
