--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ solana-listener = { path = "crates/solana-listener" }
 common-serde-utils = { path = "crates/common-serde-utils" }
 solana-event-forwarder = { path = "crates/solana-event-forwarder" }
 solana-tx-pusher = { path = "crates/solana-tx-pusher" }
+rest-service = { path = "crates/rest-service" }
 retrying-solana-http-sender = { path = "crates/retrying-solana-http-sender" }
 solana-gateway-task-processor = { path = "crates/solana-gateway-task-processor" }
 effective-tx-sender = { path = "crates/effective-tx-sender" }
@@ -79,13 +80,13 @@ relayer-amplifier-state = { git = "https://github.com/eigerco/axelar-relayer-cor
 core-common-serde-utils = { git = "https://github.com/eigerco/axelar-relayer-core.git", package = "common-serde-utils", branch = "main" }
 
 # Solana Gateway
-axelar-solana-gateway = { git = "https://github.com/eigerco/solana-axelar.git", rev = "91c8cf2", features = ["no-entrypoint"] }
-axelar-solana-its = { git = "https://github.com/eigerco/solana-axelar.git", rev = "91c8cf2", features = ["no-entrypoint"] }
-axelar-solana-governance = { git = "https://github.com/eigerco/solana-axelar.git", rev = "91c8cf2", features = ["no-entrypoint"] }
-gateway-event-stack = { git = "https://github.com/eigerco/solana-axelar.git", rev = "91c8cf2" }
-axelar-solana-encoding = { git = "https://github.com/eigerco/solana-axelar.git", rev = "91c8cf2" }
-axelar-message-primitives = { git = "https://github.com/eigerco/solana-axelar.git", rev = "91c8cf2" }
-axelar-executable = { git = "https://github.com/eigerco/solana-axelar.git", rev = "91c8cf2" }
+axelar-solana-gateway = { git = "https://github.com/eigerco/solana-axelar.git", rev = "e212e33", features = ["no-entrypoint"] }
+axelar-solana-its = { git = "https://github.com/eigerco/solana-axelar.git", rev = "e212e33", features = ["no-entrypoint"] }
+axelar-solana-governance = { git = "https://github.com/eigerco/solana-axelar.git", rev = "e212e33", features = ["no-entrypoint"] }
+gateway-event-stack = { git = "https://github.com/eigerco/solana-axelar.git", rev = "e212e33" }
+axelar-solana-encoding = { git = "https://github.com/eigerco/solana-axelar.git", rev = "e212e33" }
+axelar-message-primitives = { git = "https://github.com/eigerco/solana-axelar.git", rev = "e212e33" }
+axelar-executable = { git = "https://github.com/eigerco/solana-axelar.git", rev = "e212e33" }
 
 # CLI
 clap = { version = "4", features = ["derive"] }
@@ -120,17 +121,20 @@ serde_json = "1"
 simd-json = "0.14"
 
 # Tests
-rstest = { version = "0.23" }
-test-log = { version = "0.2", features = ["trace"], default-features = false }
-pretty_assertions = "1"
 mockall = "0.13"
+pretty_assertions = "1"
+rstest = { version = "0.23" }
+serial_test = "3.2"
+test-log = { version = "0.2", features = ["trace"], default-features = false }
 
 # Errors
 eyre = "0.6"
 color-eyre = "0.6"
 
 # HTTP
+axum = "0.7.9"
 reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "deflate", "rustls-tls", "stream", "http2"] }
+tower-http = { version = "0.6.2", features = ["trace"] }
 
 # Solana
 solana-client = "=2.0.16"
