feat: gas service support on the relayer (#8)
---------

Signed-off-by: Guilherme Felipe da Silva <gfsilva.eng@gmail.com>
Co-authored-by: Guilherme Felipe da Silva <gfsilva.eng@gmail.com>

--- a/.github/actions/setup-repo/action.yaml
+++ b/.github/actions/setup-repo/action.yaml
@@ -17,3 +17,11 @@ runs:
     - uses: Swatinem/rust-cache@v2
       with:
         cache-on-failure: true
+        cache-all-crates: true
+        rust-cache: "buildjet"
+
+    - name: Install needed tooling (needed for solana deps)
+      shell: bash
+      run: |
+        sudo apt-get install -y protobuf-compiler bzip2 clang
+
