--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,7 @@ concurrency:
 name: test
 jobs:
   test:
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     name: test
     steps:
       - uses: actions/checkout@v4
@@ -22,4 +22,4 @@ jobs:
         uses: ./.github/actions/setup-repo
 
       - name: cargo coverage
-        run: cargo xtask test
+        run: RUST_LOG=solana_listener=debug cargo xtask test
