--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,14 +80,17 @@ relayer-amplifier-state = { git = "https://github.com/eigerco/axelar-relayer-cor
 core-common-serde-utils = { git = "https://github.com/eigerco/axelar-relayer-core.git", package = "common-serde-utils", branch = "main" }
 
 # Solana Gateway
-axelar-solana-gateway = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main", features = ["no-entrypoint"] }
-axelar-solana-its = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main", features = ["no-entrypoint"] }
-axelar-solana-governance = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main", features = ["no-entrypoint"] }
-gateway-event-stack = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main" }
-axelar-solana-encoding = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main" }
-axelar-message-primitives = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main" }
-axelar-executable = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main" }
-its-instruction-builder = { git = "https://github.com/eigerco/solana-axelar.git", branch = "main" }
+axelar-solana-gateway = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925", features = ["no-entrypoint"] }
+axelar-solana-its = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925", features = ["no-entrypoint"] }
+axelar-solana-governance = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925", features = ["no-entrypoint"] }
+gateway-event-stack = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925" }
+axelar-solana-encoding = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925" }
+axelar-solana-gas-service = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925" }
+axelar-solana-memo-program = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925" }
+axelar-solana-gateway-test-fixtures = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925" }
+axelar-message-primitives = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925" }
+axelar-executable = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925" }
+its-instruction-builder = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925" }
 
 # CLI
 clap = { version = "4", features = ["derive"] }
@@ -128,7 +131,7 @@ pretty_assertions = "1"
 rstest = { version = "0.23" }
 serial_test = "3.2"
 test-log = { version = "0.2", features = ["trace"], default-features = false }
-rand =  "0.8.5"
+rand = "0.8.5"
 
 # Errors
 eyre = "0.6"
@@ -141,7 +144,9 @@ tower-http = { version = "0.6.2", features = ["trace"] }
 
 # Solana
 solana-client = "=2.0.16"
+solana-test-validator = "=2.0.16"
 solana-rpc-client = "=2.0.16"
+solana-rpc = "=2.0.16"
 solana-rpc-client-api = "=2.0.16"
 solana-program = "=2.0.16"
 solana-sdk = "=2.0.16"
