--- a/crates/solana-gateway-task-processor/Cargo.toml
+++ b/crates/solana-gateway-task-processor/Cargo.toml
@@ -30,7 +30,8 @@ num-traits.workspace = true
 relayer-amplifier-state.workspace = true
 its-instruction-builder.workspace = true
 solana-transaction-status.workspace = true
-bincode.workspace= true
+axelar-solana-gas-service.workspace = true
+bincode.workspace = true
 
 [dev-dependencies]
 serde_json.workspace = true
