--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,24 +73,24 @@ solana-gateway-task-processor = { path = "crates/solana-gateway-task-processor" 
 effective-tx-sender = { path = "crates/effective-tx-sender" }
 
 # Relayer core
-amplifier-api = { git = "https://github.com/eigerco/axelar-relayer-core.git", branch = "main" }
-relayer-engine = { git = "https://github.com/eigerco/axelar-relayer-core.git", branch = "main" }
-relayer-amplifier-api-integration = { git = "https://github.com/eigerco/axelar-relayer-core.git", branch = "main" }
-relayer-amplifier-state = { git = "https://github.com/eigerco/axelar-relayer-core.git", branch = "main" }
-core-common-serde-utils = { git = "https://github.com/eigerco/axelar-relayer-core.git", package = "common-serde-utils", branch = "main" }
+amplifier-api = { git = "https://github.com/eigerco/axelar-relayer-core.git", rev = "7f84b8d" }
+relayer-engine = { git = "https://github.com/eigerco/axelar-relayer-core.git", rev = "7f84b8d" }
+relayer-amplifier-api-integration = { git = "https://github.com/eigerco/axelar-relayer-core.git", rev = "7f84b8d" }
+relayer-amplifier-state = { git = "https://github.com/eigerco/axelar-relayer-core.git", rev = "7f84b8d" }
+core-common-serde-utils = { git = "https://github.com/eigerco/axelar-relayer-core.git", package = "common-serde-utils", rev = "7f84b8d" }
 
 # Solana Gateway
-axelar-solana-gateway = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925", features = ["no-entrypoint"] }
-axelar-solana-its = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925", features = ["no-entrypoint"] }
-axelar-solana-governance = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925", features = ["no-entrypoint"] }
-gateway-event-stack = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925" }
-axelar-solana-encoding = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925" }
-axelar-solana-gas-service = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925" }
-axelar-solana-memo-program = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925" }
-axelar-solana-gateway-test-fixtures = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925" }
-axelar-message-primitives = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925" }
-axelar-executable = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925" }
-its-instruction-builder = { git = "https://github.com/eigerco/solana-axelar.git", rev = "c08f0925" }
+axelar-solana-gateway = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61b074d460", features = ["no-entrypoint"] }
+axelar-solana-its = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61b074d460", features = ["no-entrypoint"] }
+axelar-solana-governance = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61b074d460", features = ["no-entrypoint"] }
+gateway-event-stack = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61b074d460" }
+axelar-solana-encoding = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61b074d460" }
+axelar-solana-gas-service = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61b074d460", features = ["no-entrypoint"] }
+axelar-solana-memo-program = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61b074d460", features = ["no-entrypoint"] }
+axelar-solana-gateway-test-fixtures = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61b074d460" }
+axelar-message-primitives = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61b074d460" }
+axelar-executable = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61b074d460" }
+its-instruction-builder = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61b074d460" }
 
 # CLI
 clap = { version = "4", features = ["derive"] }
