feat: accurate gas calculation for Amplifier API reporting (#18)
* fix: total gas consumption accounts for signatures
* test: add test case for "message executed" tx cost summing
* refactor: execute task will always close the message payload PDA
* feat: gateway task processor will accurately compute the consumed gas on failure

--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -1,6 +1,22 @@
 [test-groups]
-rest-service-same-port = { max-threads = 1 }
+serial-8080-port = { max-threads = 1 }
+serial-test-validator = { max-threads = 4 }
+
+[[profile.default.overrides]]
+filter = 'package(solana-listener)'
+test-group = 'serial-test-validator'
+threads-required = 4
+
+[[profile.default.overrides]]
+filter = 'package(solana-event-forwarder)'
+test-group = 'serial-test-validator'
+threads-required = 4
+
+[[profile.default.overrides]]
+filter = 'package(solana-gateway-task-processor)'
+test-group = 'serial-test-validator'
+threads-required = 4
 
 [[profile.default.overrides]]
 filter = 'package(rest-service)'
-test-group = 'rest-service-same-port'
+test-group = 'serial-8080-port'
