--- a/crates/solana-event-forwarder/Cargo.toml
+++ b/crates/solana-event-forwarder/Cargo.toml
@@ -12,6 +12,7 @@ futures.workspace = true
 axelar-solana-gas-service.workspace = true
 solana-gateway-task-processor.workspace = true
 relayer-amplifier-api-integration.workspace = true
+gateway-gas-computation.workspace = true
 solana-listener.workspace = true
 relayer-engine.workspace = true
 tracing.workspace = true
@@ -20,10 +21,13 @@ bs58.workspace = true
 solana-sdk.workspace = true
 axelar-solana-gateway.workspace = true
 itertools.workspace = true
+axelar-executable.workspace = true
 gateway-event-stack.workspace = true
+solana-rpc-client.workspace = true
 
 [dev-dependencies]
 base64.workspace = true
+serial_test.workspace = true
 axelar-solana-gateway-test-fixtures.workspace = true
 retrying-solana-http-sender.workspace = true
 axelar-solana-memo-program.workspace = true
@@ -33,6 +37,7 @@ solana-rpc.workspace = true
 test-log.workspace = true
 tokio.workspace = true
 pretty_assertions.workspace = true
+axelar-solana-encoding.workspace = true
 
 [lints]
 workspace = true
