--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ suspicious = { priority = -7, level = "deny" }
 pedantic = { priority = -8, level = "deny" }
 nursery = { priority = -9, level = "deny" }
 
+
+allow_attributes = "allow"
 cargo_common_metadata = "allow"
 pattern_type_mismatch = "allow"
 missing_docs_in_private_items = "allow"
@@ -82,18 +84,19 @@ relayer-amplifier-state = { git = "https://github.com/eigerco/axelar-relayer-cor
 core-common-serde-utils = { git = "https://github.com/eigerco/axelar-relayer-core.git", package = "common-serde-utils", rev = "5c909d2" }
 
 # Solana Gateway
-axelar-solana-gateway = { git = "https://github.com/eigerco/solana-axelar.git", rev = "f6c83f4", features = ["no-entrypoint"] }
-axelar-solana-its = { git = "https://github.com/eigerco/solana-axelar.git", rev = "f6c83f4", features = ["no-entrypoint"] }
-axelar-solana-governance = { git = "https://github.com/eigerco/solana-axelar.git", rev = "f6c83f4", features = ["no-entrypoint"] }
-gateway-event-stack = { git = "https://github.com/eigerco/solana-axelar.git", rev = "f6c83f4" }
-axelar-solana-encoding = { git = "https://github.com/eigerco/solana-axelar.git", rev = "f6c83f4" }
-axelar-solana-gas-service = { git = "https://github.com/eigerco/solana-axelar.git", rev = "f6c83f4", features = ["no-entrypoint"] }
-axelar-solana-memo-program = { git = "https://github.com/eigerco/solana-axelar.git", rev = "f6c83f4", features = ["no-entrypoint"] }
-axelar-solana-gateway-test-fixtures = { git = "https://github.com/eigerco/solana-axelar.git", rev = "f6c83f4" }
-axelar-message-primitives = { git = "https://github.com/eigerco/solana-axelar.git", rev = "f6c83f4" }
-axelar-executable = { git = "https://github.com/eigerco/solana-axelar.git", rev = "f6c83f4" }
-its-instruction-builder = { git = "https://github.com/eigerco/solana-axelar.git", rev = "f6c83f4" }
-interchain-token-transfer-gmp = { git = "https://github.com/eigerco/solana-axelar.git", rev = "f6c83f4" }
+axelar-solana-gateway = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220", features = ["no-entrypoint"] }
+axelar-solana-its = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220", features = ["no-entrypoint"] }
+axelar-solana-governance = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220", features = ["no-entrypoint"] }
+gateway-event-stack = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220" }
+axelar-solana-encoding = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220" }
+axelar-solana-gas-service = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220", features = ["no-entrypoint"] }
+axelar-solana-gas-service-events = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220" }
+axelar-solana-memo-program = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220", features = ["no-entrypoint"] }
+axelar-solana-gateway-test-fixtures = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220" }
+axelar-message-primitives = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220" }
+axelar-executable = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220" }
+its-instruction-builder = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220" }
+interchain-token-transfer-gmp = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220" }
 
 # CLI
 clap = { version = "4", features = ["derive"] }
