feat: update solana deps (#61)
* chore: updated to local deps

* chore: updated solana libs, compile fails due to opentelemetry

* chore: update opentelemetry

* feat: updated programs build with solana deps versions 2.2.~

* chore: removal of dalek curve patch

* chore: proper rust version and git dependencies

* chore: cargo fmt

* chore: cargo deny check

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,19 +84,19 @@ relayer-amplifier-state = { git = "https://github.com/eigerco/axelar-relayer-cor
 core-common-serde-utils = { git = "https://github.com/eigerco/axelar-relayer-core.git", package = "common-serde-utils", rev = "5c909d2" }
 
 # Solana Gateway
-axelar-solana-gateway = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220", features = ["no-entrypoint"] }
-axelar-solana-its = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220", features = ["no-entrypoint"] }
-axelar-solana-governance = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220", features = ["no-entrypoint"] }
-gateway-event-stack = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220" }
-axelar-solana-encoding = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220" }
-axelar-solana-gas-service = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220", features = ["no-entrypoint"] }
-axelar-solana-gas-service-events = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220" }
-axelar-solana-memo-program = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220", features = ["no-entrypoint"] }
-axelar-solana-gateway-test-fixtures = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220" }
-axelar-message-primitives = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220" }
-axelar-executable = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220" }
-its-instruction-builder = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220" }
-interchain-token-transfer-gmp = { git = "https://github.com/eigerco/solana-axelar.git", rev = "61ec220" }
+axelar-solana-gateway = { git = "https://github.com/eigerco/solana-axelar.git", rev = "59a0f1f", features = ["no-entrypoint"] }
+axelar-solana-its = { git = "https://github.com/eigerco/solana-axelar.git", rev = "59a0f1f", features = ["no-entrypoint"] }
+axelar-solana-governance = { git = "https://github.com/eigerco/solana-axelar.git", rev = "59a0f1f", features = ["no-entrypoint"] }
+gateway-event-stack = { git = "https://github.com/eigerco/solana-axelar.git", rev = "59a0f1f" }
+axelar-solana-encoding = { git = "https://github.com/eigerco/solana-axelar.git", rev = "59a0f1f" }
+axelar-solana-gas-service = { git = "https://github.com/eigerco/solana-axelar.git", rev = "59a0f1f", features = ["no-entrypoint"] }
+axelar-solana-gas-service-events = { git = "https://github.com/eigerco/solana-axelar.git", rev = "59a0f1f" }
+axelar-solana-memo-program = { git = "https://github.com/eigerco/solana-axelar.git", rev = "59a0f1f", features = ["no-entrypoint"] }
+axelar-solana-gateway-test-fixtures = { git = "https://github.com/eigerco/solana-axelar.git", rev = "59a0f1f" }
+axelar-message-primitives = { git = "https://github.com/eigerco/solana-axelar.git", rev = "59a0f1f" }
+axelar-executable = { git = "https://github.com/eigerco/solana-axelar.git", rev = "59a0f1f" }
+its-instruction-builder = { git = "https://github.com/eigerco/solana-axelar.git", rev = "59a0f1f" }
+interchain-token-transfer-gmp = { git = "https://github.com/eigerco/solana-axelar.git", rev = "59a0f1f" }
 
 # CLI
 clap = { version = "4", features = ["derive"] }
@@ -151,15 +151,15 @@ tower-http = { version = "0.6.2", features = ["trace"] }
 tower = { version = "0.5.2", features = ["limit"] }
 
 # Solana
-solana-client = "=2.0.16"
-solana-test-validator = "=2.0.16"
-solana-rpc-client = "=2.0.16"
-solana-rpc = "=2.0.16"
-solana-rpc-client-api = "=2.0.16"
-solana-program = "=2.0.16"
-solana-sdk = "=2.0.16"
-solana-transaction-status = "=2.0.16"
-solana-compute-budget = "=2.0.16"
+solana-client = "2.2.7"
+solana-test-validator = "2.2.7"
+solana-rpc-client = "2.2.7"
+solana-rpc = "2.2.7"
+solana-rpc-client-api = "2.2.7"
+solana-program = "2.2.1"
+solana-sdk = "2.2.2"
+solana-transaction-status = "2.2.7"
+solana-compute-budget = "2.2.7"
 
 # Async
 tokio = { version = "1", features = ["rt", "signal", "rt-multi-thread", "macros"] }
@@ -176,12 +176,12 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "tracin
 tracing-error = "0.2"
 
 # opentelemetry
-opentelemetry = "0.25"
-opentelemetry-otlp = { version = "0.25", default-features = false, features = ["trace", "tokio", "logs", "metrics", "grpc-tonic"] }
-tracing-opentelemetry = { version = "0.26", default-features = false, features = ["metrics"] }
-opentelemetry-semantic-conventions = "0.25"
-opentelemetry_sdk = { version = "0.25", features = ["rt-tokio"] }
-opentelemetry-appender-tracing = { version = "0.25" }
+opentelemetry = "0.29"
+opentelemetry-otlp = { version = "0.29", default-features = false, features = ["trace", "tokio", "logs", "metrics", "grpc-tonic"] }
+tracing-opentelemetry = { version = "0.30", default-features = false, features = ["metrics"] }
+opentelemetry-semantic-conventions = "0.29"
+opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
+opentelemetry-appender-tracing = { version = "0.29" }
 
 [profile.release]
 lto = true
@@ -191,10 +191,3 @@ panic = "abort"
 [profile.dev]
 debug = 0
 # codegen-backend = "cranelift" (not supported on m1 mac)
-
-[patch.crates-io]
-# curve25519-dalek 3.x pin zeroize to <1.4
-# which conflicts with other dependencies requiring zeroize ^1.5.
-# We’re patching it here to unpin zeroize, using commit from a PR, see
-# https://github.com/dalek-cryptography/curve25519-dalek/pull/606
-curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }
