feat: configuration reading from environment (#62)
* feat: initial proposition of new reading of configuration

* feat: direct parsing of env to struct

* chore: added dotenv for easier handling of environment vars

* chore: remove .env from tracking

* chore: dependencies local

* feat: added solana listener from env

* feat: updated relayer engine config

* feat: added solana rpc config from env

* feat: added solana gateway config from env

* feat: amplifier component also works, calling IDENTITY from console, and not .env file

* feat: all Configs done

* chore: use eyre result

* chore: default value for tx_scan_poll_period

* chore: proper git revision for axelar-relayer-core

* test: updates

* chore: cargo check and fmt

* chore: cargo deny to use dotenvy

* doc: update for cargo docs

* chore: unused deps

* test: removed array bytes test case

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,11 +77,11 @@ effective-tx-sender = { path = "crates/effective-tx-sender" }
 gateway-gas-computation = { path = "crates/gateway-gas-computation" }
 
 # Relayer core
-amplifier-api = { git = "https://github.com/eigerco/axelar-relayer-core.git", rev = "5c909d2" }
-relayer-engine = { git = "https://github.com/eigerco/axelar-relayer-core.git", rev = "5c909d2" }
-relayer-amplifier-api-integration = { git = "https://github.com/eigerco/axelar-relayer-core.git", rev = "5c909d2" }
-relayer-amplifier-state = { git = "https://github.com/eigerco/axelar-relayer-core.git", rev = "5c909d2" }
-core-common-serde-utils = { git = "https://github.com/eigerco/axelar-relayer-core.git", package = "common-serde-utils", rev = "5c909d2" }
+amplifier-api = { git = "https://github.com/eigerco/axelar-relayer-core", rev = "0d917f6" }
+relayer-engine = { git = "https://github.com/eigerco/axelar-relayer-core", rev = "0d917f6" }
+relayer-amplifier-api-integration = { git = "https://github.com/eigerco/axelar-relayer-core", rev = "0d917f6" }
+relayer-amplifier-state = { git = "https://github.com/eigerco/axelar-relayer-core", rev = "0d917f6" }
+core-common-serde-utils = { git = "https://github.com/eigerco/axelar-relayer-core", rev = "0d917f6", package = "common-serde-utils" }
 
 # Solana Gateway
 axelar-solana-gateway = { git = "https://github.com/eigerco/solana-axelar.git", rev = "59a0f1f", features = ["no-entrypoint"] }
@@ -99,7 +99,7 @@ its-instruction-builder = { git = "https://github.com/eigerco/solana-axelar.git"
 interchain-token-transfer-gmp = { git = "https://github.com/eigerco/solana-axelar.git", rev = "59a0f1f" }
 
 # CLI
-clap = { version = "4", features = ["derive"] }
+clap = { version = "4", features = ["derive", "env"] }
 xshell = "0.2"
 
 # Utils
@@ -124,6 +124,7 @@ itertools = "0.13"
 num-traits = "0.2"
 memmap2 = "0.9"
 bytemuck = "1.19"
+dotenvy = "0.15.7"
 
 # Serde
 bincode = "1"
