--- a/crates/solana-gateway-task-processor/Cargo.toml
+++ b/crates/solana-gateway-task-processor/Cargo.toml
@@ -8,34 +8,38 @@ license.workspace = true
 edition.workspace = true
 
 [dependencies]
-eyre.workspace = true
-solana-sdk.workspace = true
-typed-builder.workspace = true
-solana-client.workspace = true
-serde.workspace = true
-axelar-solana-gateway.workspace = true
-axelar-solana-its.workspace = true
-axelar-solana-governance.workspace = true
-axelar-solana-encoding.workspace = true
-axelar-solana-memo-program.workspace = true
-gateway-gas-computation.workspace = true
-solana-listener.workspace = true
-tracing.workspace = true
-futures.workspace = true
-common-serde-utils = { workspace = true }
-bs58.workspace = true
-relayer-engine.workspace = true
 amplifier-api.workspace = true
-relayer-amplifier-api-integration.workspace = true
-effective-tx-sender.workspace = true
+async-trait.workspace = true
 axelar-executable.workspace = true
-num-traits.workspace = true
-relayer-amplifier-state.workspace = true
-its-instruction-builder.workspace = true
-solana-transaction-status.workspace = true
+axelar-solana-encoding.workspace = true
 axelar-solana-gas-service.workspace = true
+axelar-solana-gateway.workspace = true
+axelar-solana-governance.workspace = true
+axelar-solana-its.workspace = true
+axelar-solana-memo-program.workspace = true
 bincode.workspace = true
+bs58.workspace = true
 clap.workspace = true
+common-serde-utils = { workspace = true }
+effective-tx-sender.workspace = true
+eyre.workspace = true
+futures.workspace = true
+gateway-gas-computation.workspace = true
+its-instruction-builder.workspace = true
+num-traits.workspace = true
+relayer-amplifier-api-integration.workspace = true
+relayer-amplifier-state.workspace = true
+relayer-engine.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+solana-client.workspace = true
+solana-listener.workspace = true
+solana-sdk.workspace = true
+solana-transaction-status.workspace = true
+tracing.workspace = true
+thiserror.workspace = true
+tokio.workspace = true
+typed-builder.workspace = true
 
 [dev-dependencies]
 async-trait.workspace = true
@@ -47,13 +51,11 @@ mockall.workspace = true
 pretty_assertions.workspace = true
 rand.workspace = true
 retrying-solana-http-sender.workspace = true
-serde_json.workspace = true
 solana-rpc-client-api.workspace = true
 solana-rpc.workspace = true
 solana-test-validator.workspace = true
 solana-transaction-status.workspace = true
 test-log.workspace = true
-tokio.workspace = true
 uuid.workspace = true
 interchain-token-transfer-gmp.workspace = true
 
