ci: automate the *.so update
Fix the *.so output location

--- a/.github/workflows/update-dynamic-libraries.yml
+++ b/.github/workflows/update-dynamic-libraries.yml
@@ -33,8 +33,7 @@ jobs:
           
       - name: Extract and update fixtures
         run: |
-          unzip -o solana-dynamic-libraries.zip
-          cp *.so tests/fixtures/
+          unzip -o solana-dynamic-libraries.zip -d tests/fixtures/
           
       - name: Check for changes
         id: changes
